header menu and logo complete

--- a/index.html
+++ b/index.html
@@ -6,8 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G-3 Architect</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>G-3 Architect</h1>
+    <!-- ===========
+        header section start
+        ============ -->
+    <header>
+        <div class="main-header">
+            <div class="site-logo">
+                <h2>G3 Architects</h2>
+            </div>
+            <nav>
+                <ul>
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Contact</li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+        <!-- ===========
+        header section end
+        ============ -->
 </body>
 </html>
