--- a/index.html
+++ b/index.html
@@ -27,6 +27,22 @@
                 </ul>
             </nav>
         </div>
+        <!-- manu end -->
+
+        <div class="hero-sec">
+            <div class="hero-text">
+                <h2>
+                    Brand New  <br>
+                    Group of Architects 
+                </h2>
+                <p>
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+            </div>
+            <div class="hero-btn">
+                <button class="pri-btn">Explore More</button>
+            </div>
+        </div>
     </header>
         <!-- ===========
         header section end
