header section html and css complete

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
             <div class="hero-btn">
                 <button class="pri-btn">Explore More</button>
             </div>
+            <div class="hero-image">
+                <img src="./images/banner.png" alt="hero-banner">
+            </div>
         </div>
     </header>
         <!-- ===========
