features section start

--- a/index.html
+++ b/index.html
@@ -50,5 +50,17 @@
         <!-- ===========
         header section end
         ============ -->
+
+<!--========================== 
+    features section start 
+==============================-->
+
+    <section class="features">
+
+    </section>
+
+    <!--========================== 
+    features section end 
+==============================-->
 </body>
 </html>
