--- a/index.html
+++ b/index.html
@@ -56,7 +56,36 @@
 ==============================-->
 
     <section class="features">
-
+        <div class="glary">
+            <div class="glary-image">
+                <img src="./images/team1.png" alt="team1">
+            </div>
+            <div class="glary-image">
+                <img src="./images/team2.png" alt="team2">
+            </div>
+            <div class="glary-image">
+                <img src="./images/team3.png" alt="team3">
+            </div>
+            <div class="glary-image">
+                <img src="./images/team4.png" alt="team4">
+            </div>
+        </div>
+        <div class="features-texts">
+            <div class="features-texts-title">
+                <h2>
+                    <span class="q-style">Quick list</span> <strong>of Our</strong> <br>
+                    <span class="f-style">Features</span>
+                </h2>
+            </div>
+            <div class="features-text-details">
+                <p>
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+            </div>
+            <div class="features-btn">
+                <button class="pri-btn">Explore More</button>
+            </div>
+        </div>
     </section>
 
     <!--========================== 
