sec two complete

--- a/index.html
+++ b/index.html
@@ -96,8 +96,84 @@
     Experience section start 
 ================================-->
 
-    <section class="experience">
+    <section class="sec-two">
+        <div class="experience">
+                <div class="features-details">
+                    <div class="features-title">
+                        <h2>Features you will <br> love & enjoy</h2>
+                    </div>
+                    <div class="features-discrip">
+                        <p>
+                            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                        </p>
+                    </div>
+                    <div class="features-lists">
+                        <!-- features lists -->
+                        <div class="one-features-list">
+                                    <div class="fl-title">
+                                        <h3>Dexktop & Mobile Version</h3>
+                                    </div>
+                                    <div class="fl-discrip">
+                                        <p>
+                                            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+                                        </p>
+                                    </div>
+                        </div>
+                        <div class="one-features-list">
+                                    <div class="fl-title">
+                                        <h3>Dexktop & Mobile Version</h3>
+                                    </div>
+                                    <div class="fl-discrip">
+                                        <p>
+                                            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+                                        </p>
+                                    </div>
+                        </div>
+                        <div class="one-features-list">
+                                    <div class="fl-title">
+                                        <h3>Dexktop & Mobile Version</h3>
+                                    </div>
+                                    <div class="fl-discrip">
+                                        <p>
+                                            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+                                        </p>
+                                    </div>
+                        </div>
+                        <div class="one-features-list">
+                                    <div class="fl-title">
+                                        <h3>Dexktop & Mobile Version</h3>
+                                    </div>
+                                    <div class="fl-discrip">
+                                        <p>
+                                            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+                                        </p>
+                                    </div>
+                        </div>
+                        <div class="one-features-list">
+                                    <div class="fl-title">
+                                        <h3>Dexktop & Mobile Version</h3>
+                                    </div>
+                                    <div class="fl-discrip">
+                                        <p>
+                                            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+                                        </p>
+                                    </div>
+                        </div>
+                        <!-- features lists end -->
+                    </div>
+                </div>
 
+        <!-- features image right section -->
+
+                    <div class="features-image">
+                        <img src="./images/architect.png" alt="architect-girl">
+                    </div>
+        </div>
+
+
+        <div class="ex-btn">
+            <button><span class="ten-years">10+Year</span><br><span>Experience</span></button>
+        </div>
     </section>
 
 
