some facts section start

--- a/index.html
+++ b/index.html
@@ -182,5 +182,19 @@
     Experience section end 
 ================================-->
 
+
+<!--============================ 
+    Some Facts section start 
+================================-->
+
+
+
+
+
+
+<!--============================ 
+    Some Facts section end 
+================================-->
+
 </body>
 </html>
