--- a/index.html
+++ b/index.html
@@ -189,7 +189,62 @@
 
 
 
+    <section class="some-fact-sec">
+        <div class="some-fact-headings">
+            <h2>Some Facts</h2>
+            <p>
+                There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration.
+            </p>
 
+        </div>
+
+        <div class="some-facts">
+                <div class="one-fact">
+                    <div class="fact-icon">
+                        <img src="./images/icons/ribon.png" alt="Awards Winnings">
+                    </div>
+                    <div class="fact-number">
+                        <h3>54</h3>
+                    </div>
+                    <div class="fact-info">
+                        <p>Awards Winnings</p>
+                    </div>
+                </div>
+                <div class="one-fact">
+                    <div class="fact-icon">
+                        <img src="./images/icons/projects.png" alt="Project Finished">
+                    </div>
+                    <div class="fact-number">
+                        <h3>1454</h3>
+                    </div>
+                    <div class="fact-info">
+                        <p>Project Finished</p>
+                    </div>
+                </div>
+                <div class="one-fact">
+                    <div class="fact-icon">
+                        <img src="./images/icons/customers.png" alt="Clients Worked">
+                    </div>
+                    <div class="fact-number">
+                        <h3>590</h3>
+                    </div>
+                    <div class="fact-info">
+                        <p>Clients Worked</p>
+                    </div>
+                </div>
+                <div class="one-fact">
+                    <div class="fact-icon">
+                        <img src="./images/icons/email.png" alt="Email Send">
+                    </div>
+                    <div class="fact-number">
+                        <h3>22578</h3>
+                    </div>
+                    <div class="fact-info">
+                        <p>Email Send</p>
+                    </div>
+                </div>
+        </div>
+    </section>
 
 
 <!--============================ 
