sponsors section start

--- a/index.html
+++ b/index.html
@@ -249,7 +249,26 @@
 
 <!--============================ 
     Some Facts section end 
+>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
+>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
+>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
+    Sponsors section start
 ================================-->
+
+<section class="sponsors-sec">  
+
+</section>
+
+<!--============================ 
+    Sponsors section end 
+================================-->
+
+
+
+
 
 </body>
 </html>
