sponsor section complete

--- a/index.html
+++ b/index.html
@@ -259,7 +259,33 @@
 ================================-->
 
 <section class="sponsors-sec">  
-
+    <div class="hero-sec">
+        <div class="hero-text">
+            <h2>
+                Our Sponsors 
+            </h2>
+            <p>
+                There are many variations of passages of Lorem Ipsum available,but the majority have suffered alteration.
+            </p>
+        </div>
+    </div>
+    <div class="sponsor-images">
+        <div class="one-img">
+            <img src="./images/sponsors/spotify.png" alt="Spotify">
+        </div>
+        <div class="one-img">
+            <img src="./images/sponsors/amazon.png" alt="amazon">
+        </div>
+        <div class="one-img">
+            <img src="./images/sponsors/google.png" alt="google">
+        </div>
+        <div class="one-img">
+            <img src="./images/sponsors/telerama.png" alt="telerama">
+        </div>
+        <div class="one-img">
+            <img src="./images/sponsors/figma.png" alt="figma">
+        </div>
+    </div>
 </section>
 
 <!--============================ 
