--- a/index.html
+++ b/index.html
@@ -290,10 +290,19 @@
 
 <!--============================ 
     Sponsors section end 
+>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
+>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
+>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
+    footer section start
 ================================-->
 
 
-
+<footer>
+    <p>All rights reserved <a href="#">Rifat Robi</a> copyright@2023 startup landing page design</p>
+</footer>
 
 
 </body>
