responsive start with header section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G-3 Architect</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/resposive.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
@@ -55,7 +56,7 @@
     features section start 
 ==============================-->
 
-    <section class="features">
+    <section class="features hide">
         <div class="glary">
             <div class="glary-image">
                 <img src="./images/team1.png" alt="team1">
@@ -96,7 +97,7 @@
     Experience section start 
 ================================-->
 
-    <section class="sec-two">
+    <section class="sec-two hide">
         <div class="experience">
                 <div class="features-details">
                     <div class="features-title">
@@ -189,7 +190,7 @@
 
 
 
-    <section class="some-fact-sec">
+    <section class="some-fact-sec hide">
         <div class="some-fact-headings">
             <h2>Some Facts</h2>
             <p>
@@ -258,7 +259,7 @@
     Sponsors section start
 ================================-->
 
-<section class="sponsors-sec">  
+<section class="sponsors-sec hide">  
     <div class="hero-sec">
         <div class="hero-text">
             <h2>
@@ -301,7 +302,7 @@
 
 
 
-<section class="contact">
+<section class="contact hide">
     <div class="contact-img">
         <img src="./images/contact-us-removebg-preview.png" alt="contact">
     </div>
@@ -324,7 +325,7 @@
 
 
 
-<footer>
+<footer class="hide">
     <p>All rights reserved <a href="#">Rifat Robi</a> copyright@2023 startup landing page design</p>
 </footer>
 
