responsive problem in features section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- ===========
         header section start
         ============ -->
-    <header>
+    <header class="hide">
         <div class="main-header">
             <div class="site-logo">
                 <h2>G3 Architects</h2>
