--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- ===========
         header section start
         ============ -->
-    <header class="hide">
+    <header class="">
         <div class="main-header">
             <div class="site-logo">
                 <h2>G3 Architects</h2>
@@ -56,7 +56,7 @@
     features section start 
 ==============================-->
 
-    <section class="features hide">
+    <section class="features">
         <div class="glary">
             <div class="glary-image">
                 <img src="./images/team1.png" alt="team1">
@@ -97,7 +97,7 @@
     Experience section start 
 ================================-->
 
-    <section class="sec-two hide">
+    <section class="sec-two">
         <div class="experience">
                 <div class="features-details">
                     <div class="features-title">
