sponsors ection responsive done

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
 
 
-    <section class="some-fact-sec hide">
+    <section class="some-fact-sec">
         <div class="some-fact-headings">
             <h2>Some Facts</h2>
             <p>
@@ -259,7 +259,7 @@
     Sponsors section start
 ================================-->
 
-<section class="sponsors-sec hide">  
+<section class="sponsors-sec">  
     <div class="hero-sec">
         <div class="hero-text">
             <h2>
