--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 
 
 
-<section class="contact hide">
+<section class="contact">
     <div class="contact-img">
         <img src="./images/contact-us-removebg-preview.png" alt="contact">
     </div>
@@ -325,7 +325,7 @@
 
 
 
-<footer class="hide">
+<footer class="#">
     <p>All rights reserved <a href="#">Rifat Robi</a> copyright@2023 startup landing page design</p>
 </footer>
 
