--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- ===========
         header section start
         ============ -->
-    <header class="">
+    <header>
         <div class="main-header">
             <div class="site-logo">
                 <h2>G3 Architects</h2>
@@ -338,8 +338,8 @@
 
 
 
-    <footer class="#">
-        <p>All rights reserved <a href="#">Rifat Robi</a> copyright@2023 startup landing page design</p>
+    <footer>
+        <p>All rights reserved <a href="#">Rifat Robi</a> copyright@2023</p>
     </footer>
 
     <!--============================ 
