--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div class="experience">
             <div class="features-details">
                 <div class="features-title">
-                    <h2>Features you will <br> love & enjoy</h2>
+                    <h2>Features you will love & enjoy</h2>
                 </div>
                 <div class="features-discrip">
                     <p>
@@ -118,7 +118,7 @@
                     <!-- features lists -->
                     <div class="one-features-list">
                         <div class="fl-title">
-                            <h3>Dexktop & Mobile Version</h3>
+                            <h3>Desktop & Mobile Version</h3>
                         </div>
                         <div class="fl-discrip">
                             <p>
@@ -129,7 +129,7 @@
                     </div>
                     <div class="one-features-list">
                         <div class="fl-title">
-                            <h3>Dexktop & Mobile Version</h3>
+                            <h3>Desktop & Mobile Version</h3>
                         </div>
                         <div class="fl-discrip">
                             <p>
@@ -140,7 +140,7 @@
                     </div>
                     <div class="one-features-list">
                         <div class="fl-title">
-                            <h3>Dexktop & Mobile Version</h3>
+                            <h3>Desktop & Mobile Version</h3>
                         </div>
                         <div class="fl-discrip">
                             <p>
@@ -151,7 +151,7 @@
                     </div>
                     <div class="one-features-list">
                         <div class="fl-title">
-                            <h3>Dexktop & Mobile Version</h3>
+                            <h3>Desktop & Mobile Version</h3>
                         </div>
                         <div class="fl-discrip">
                             <p>
@@ -162,7 +162,7 @@
                     </div>
                     <div class="one-features-list">
                         <div class="fl-title">
-                            <h3>Dexktop & Mobile Version</h3>
+                            <h3>Desktop & Mobile Version</h3>
                         </div>
                         <div class="fl-discrip">
                             <p>
