--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <div class="main-header">
             <div class="site-logo">
-                <h2>G3 Architects</h2>
+                <h2> <span class="g">G3</span> Architects</h2>
             </div>
             <nav>
                 <ul>
